# TTCE-Wgpu

./: .gitignore  CHANGELOG.md  README.md  TTCE-Wgpu.sln
.github/workflows/: CreateNewVersionAndDraftRelease.yml  CreateNewVersionAndRelease.yml  CreatePackage.yml  CreatePackageWithDev.yml  CreateRelease.yml  CreateReleaseDraft.yml  DXCBuild.yml  DotnetTest.yml  RustClippyCheck.yml  RustCoreBuild.yml  RustCoreClippyCheck.yml  UpdateVersion.yml
.github/workflows/DotnetWorkflowScript/WriteVersion/: Program.cs
PackageDeploy/: Program.cs  SetTTTDependentcyVersion.cs
TTCE-Wgpu/: ShaderFinder.cs  TTCE-Wgpu.csproj  TTCEWgpu.cs  TTCEWgpuContextBase.cs  TTCEWgpuContextWithShaderDictionary.cs  TTCEWgpuDevice.cs  TTCEWgpuRustCore.g.cs  TTComputeHandler.cs  TTRenderTexture.cs  TTStorageBuffer.cs  TTWgpuComputeHandler.cs  TTWgpuRenderTexture.cs  TTWgpuStorageBuffer.cs
TTCE-Wgpu.Test/: Class1.cs  Program.cs  TTCE-Wgpu.Test.csproj
TTCE-Wgpu.Tests/: DisposedTest.cs  Main.cs  OperatorTest.cs  TTCE-Wgpu.Tests.csproj  TestTTCEWgpuEngine.cs  TextureIOTest.cs
TTCE-Wgpu/UnityPackageMetaData/: net.rs64.ttce-wgpu.asmdef  package.json
TexTransTool.csproj/net.rs64.tex-trans-core/: net.rs64.tex-trans-core.csproj
ttce-wgpu-rust-core/: .gitignore  Cargo.toml  build.rs
ttce-wgpu-rust-core/src/: compute_shader.rs  dxc_ctx.rs  lib.rs  main.rs  render_texture.rs  storage_buffer.rs  tex_trans_core_engine.rs
