[package]
name = "ttce-wgpu-rust-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio ={version = "1.41.0" , features = ["rt-multi-thread","macros","sync"]}
wgpu = {version = "22.1.0", features = ["naga-ir"]}
naga = {version = "22.1.0", features = ["spv-in","wgsl-out"]}
hassle-rs = "0.11.0"
once_cell = "1.20.2"


[build-dependencies]
csbindgen = "1.8.0"
