[package]
name = "ttce-wgpu-rust-core"
version = "0.1.0"
edition = "2021"
authors = [ "Reina_Sakiria" ] 
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio ={version = "1.41.0" , features = ["rt-multi-thread","macros","sync"]}
wgpu = { git = "https://github.com/ReinaS-64892/wgpu.git", branch = "fix-Image-write-value-type-is-invalid" , features = ["naga-ir"]}
naga = { git = "https://github.com/ReinaS-64892/wgpu.git", branch = "fix-Image-write-value-type-is-invalid" , features = ["spv-in","wgsl-out"]}
hassle-rs = "0.11.0"
once_cell = "1.20.2"
libloading = "0.8.6"


[build-dependencies]
csbindgen = "1.8.0"
